# jrg_pypi2nix_tests

./: .envrc  .gitignore  MANIFEST.in  README.md  default.nix  encrypt_release_repo.sh  launch_app.sh  launch_app_with_pyce_keys.sh  launch_app_without_pyce_keys.sh  make_bdist.sh  make_edist.sh  make_release_repo.sh  make_sdist.sh  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
nix/: requirements.nix  requirements_frozen.txt  requirements_override.nix  sandbox-pkgs.nix  tools-deps.nix  update_from_requirements_txt.sh
nix/pkgs/pypi2nix/: default.nix  requirements.nix
release_tools/: _encrypt_release.sh  _encrypt_using_pyce.py  _make_release.sh  _print_release_content.sh
src/jrg_pypi2nix_tests/: main.py  main_lib.py  pycemagic.py
src/jrg_pypi2nix_tests/_my_sub_package/: hello.py
tests/: test_jrg_pypi2nix_tests.py
