[bdist_wheel]
# universal = 1

[metadata]
name = jrg_jrg_pypi2nix_tests
version = 0.0.1
description = Some pypi2nix test project
long-description = file: README.md
url = https://github.com/jraygauthier/jrg_jrg_pypi2nix_tests
author = Raymond Gauthier
author_email = jraygauthier@gmail.com
license = 'Apache License 2.0'
platform = any

[options]
package_dir=
     =src
packages = find:

zip_safe = false
include_package_data = true
python_requires = >= 3.7
setup_requires =
    setuptools
    setuptools_scm

install_requires =
    requests

# tests_require =


[options.packages.find]
where = src
exclude =
# tests

[options.entry_points]
console_scripts =
    jrg_pypi2nix_tests = jrg_pypi2nix_tests.main:main
